<resources>
    <string name="app_name">top_albums</string>
    <string name="action_settings">Settings</string>

    <string name="top_albums_fragment_title">Top Albums</string>
    <string name="songs_fragment_title">Songs</string>
    <string name="artist_albums_fragment_title">Artist Albums</string>

    <string name="no_results">No Results</string>
    <string name="retry">Retry</string>

    <string name="set_filter">Filter</string>
    <string name="release_time_group">Release time</string>
    <string name="genre_group">Genre</string>

    <string name="pop_genre">Pop</string>
    <string name="alternative_genre">Alternative</string>
    <string name="rock_genre">Rock</string>
    <string name="country_genre">Country</string>
    <string name="christian_genre">Christian &amp; Gospel</string>
    <string name="classical_genre">Classical</string>
    <string name="singer_genre">Singer/Songwriter</string>
    <string name="hard_rock_genre">Hard Rock</string>
    <string name="musicals_genre">Musicals</string>
    <string name="soundtrack_genre">Soundtrack</string>

    <string name="newer_than_one_week_time">Newer Than 1 Week</string>
    <string name="newer_than_one_month_time">Newer Than 1 Month</string>
    <string name="newer_than_one_year_time">Newer Than 1 Year</string>
    <string name="older_over_one_year_time">Older Than 1 Year</string>
    <string name="older_over_five_years_time">Older Than 5 Years</string>

    <string name="search">Search phrase: </string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="check_internet_connection">An error occurred.\nCheck internet connection</string>
    <string name="player_can_not_play">An error occurred.\nPlayer can not play the song</string>

    <string name="no_album_web_page">No web page for this album</string>
    <string name="no_artist_web_page">No web page for this artist</string>

    <string name="go_to_artist_albums_fragment">Go to Artist\'s albums</string>
    <string name="go_to_album_web_page">Album web page</string>
    <string name="go_to_artist_web_page">Artist web page</string>
</resources>