<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/release_time_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacing="0dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="NEWER_THAN_ONE_WEEK"
            android:text="@string/newer_than_one_week_time" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="NEWER_THAN_ONE_MONTH"
            android:text="@string/newer_than_one_month_time" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="NEWER_THAN_ONE_YEAR"
            android:text="@string/newer_than_one_year_time" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="OLDER_OVER_ONE_YEAR"
            android:text="@string/older_over_one_year_time" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="OLDER_OVER_FIVE_YEARS"
            android:text="@string/older_over_five_years_time" />
    </com.google.android.material.chip.ChipGroup>

</RelativeLayout>
